Fix Netty CVEs
Update CI/CD workflow to use latest action versions

fix github's submit-maven action