@@ -1,4 +1,3 @@
---sun-misc-unsafe-memory-access=allow
 --enable-native-access=ALL-UNNAMED
 -XX:+EnableDynamicAgentLoading
 -Xshare:off
